# advent-of-code

./: README.md
2023/rust/: Cargo.toml  Justfile  day-01.bench.criterion.txt  day-01.bench.divan.txt  ebat  rustfmt.toml
2023/rust/day-01/: Cargo.toml
2023/rust/day-01/benches/: benchmarks-divan.rs
2023/rust/day-01/src/: part1.rs  part2.rs
2023/rust/day-02/: Cargo.toml
2023/rust/day-02/src/: part1.rs  part2.rs
2023/rust/day-03/: Cargo.toml
2023/rust/day-03/benches/: benchmarks-criterion.rs
2023/rust/day-template/: Cargo.toml
2023/rust/day-template/benches/: benchmarks-divan.rs
2023/rust/day-template/src/: main.rs
2023/rust/tools/fetch-input/: Cargo.toml
2023/rust/tools/fetch-input/src/: main.rs
2024/rust/: Cargo.toml
2024/rust/day-01/: Cargo.toml
2024/rust/day-01/benches/: benchmarks-criterion.rs
2024/rust/day-01/src/: part1.rs  part2.rs
2024/rust/day-02/: Cargo.toml
2024/rust/day-02/benches/: benchmarks-criterion.rs  benchmarks-divan.rs
2024/rust/day-02/src/: part1.rs  part2.rs
2024/rust/day-03/: Cargo.toml
2024/rust/day-03/benches/: benchmarks-divan.rs
2024/rust/day-03/src/: part1.rs  part2.rs
2024/rust/day-04/: Cargo.toml
2024/rust/day-04/benches/: benchmarks-criterion.rs  benchmarks-divan.rs
2024/rust/day-04/src/: part1.rs  part2.rs
2024/rust/day-05/: Cargo.toml
2024/rust/day-05/benches/: benchmarks-criterion.rs  benchmarks-divan.rs
2024/rust/day-05/src/: error.rs  lib.rs  parser.rs  part1.rs  part2.rs
2024/rust/day-template/: Cargo.toml
2024/rust/day-template/benches/: benchmarks-criterion.rs
2024/rust/day-template/src/: part1.rs
