[package]
name = "day-02"
authors = ["Vasiliy Yorkin <vasiliy.yorkin@gmail.com>"]
version = "0.1.0"
edition = "2024"

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
itertools.workspace = true
nom.workspace = true
miette.workspace = true

[dev-dependencies]
divan.workspace = true
rstest.workspace = true
test-log.workspace = true

[[bench]]
name = "day-02-bench"
path = "benches/benchmarks.rs"
harness = false
