[package]
name = "{{project-name}}"
authors = ["{{authors}}"]
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
itertools.workspace = true
nom.workspace = true
miette.workspace = true

[dev-dependencies]
divan.workspace = true
criterion.workspace = true
rstest.workspace = true
test-log.workspace = true

[[bench]]
name = "{{project-name}}-bench-divan"
path = "benches/benchmarks-divan.rs"
harness = false

[[bench]]
name = "{{project-name}}-bench-criterion"
path = "benches/benchmarks-criterion.rs"
harness = false
